@@ -1,3 +1,8 @@
+2008-04-12  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_log_http.erl: Include Last-Modified HTTP
+	header in responses to allow caching (EJAB-546)
+
 2008-03-12  Badlop  <badlop@process-one.net>
 
 	* README.txt: Updated text formatting. Require ejabberd 2.0.0
