@@ -1,3 +1,8 @@
+2008-04-12  Badlop  <badlop@process-one.net>
+
+	* src/web/mod_http_fileserver.erl: Include Last-Modified HTTP
+	header in responses to allow caching (EJAB-546)
+
 2008-03-12  Badlop  <badlop@process-one.net>
 
 	* src/web/mod_http_fileserver.erl (start): Fix error creating ETS
